--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,12 @@ bs4==0.0.1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+Flask==1.1.2
 idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+joblib==1.0.0
+MarkupSafe==1.1.1
 mypy-extensions==0.4.3
 numpy==1.19.5
 pandas==1.2.1
@@ -14,9 +19,15 @@ python-dateutil==2.8.1
 pytz==2020.5
 regex==2020.11.13
 requests==2.25.1
+scikit-learn==0.24.1
+scipy==1.6.0
+scrape-aruodas==0.0.1
 six==1.15.0
+sklearn==0.0
 soupsieve==2.1
+threadpoolctl==2.1.0
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.3
+Werkzeug==1.0.1
