--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ mypy-extensions==0.4.3
 numpy==1.19.5
 pandas==1.2.1
 pathspec==0.8.1
+psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2020.5
 regex==2020.11.13
@@ -25,6 +26,7 @@ scrape-aruodas==0.0.1
 six==1.15.0
 sklearn==0.0
 soupsieve==2.1
+SQLAlchemy==1.3.22
 threadpoolctl==2.1.0
 toml==0.10.2
 typed-ast==1.4.2
