--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -21,7 +22,7 @@ regex==2020.11.13
 requests==2.25.1
 scikit-learn==0.24.1
 scipy==1.6.0
-git+https://github.com/valdas-v1/scrape_aruodas
+scrape-aruodas==0.0.1
 six==1.15.0
 sklearn==0.0
 soupsieve==2.1
